src/leg.c
/* A recursive-descent parser generated by peg 0.1.18 */

#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#include <ctype.h>
#define YYRULECOUNT 42
#line 20 "leg.leg"

# include "tree.h"
# include "version.h"

# include <stdio.h>
# include <stdlib.h>
# include <unistd.h>
# include <string.h>
# include <libgen.h>
# include <assert.h>

  FILE *input= 0;

  int   verboseFlag= 0;
  int   ebnfFlag= 0;
  int   pegFlag= 0;
  int   pegjsFlag= 0;
  int   nakedFlag= 0;
  int   nolinesFlag= 0;

  static int	 lineNumber= 0;
  static int     inputPos= 0;
  static int     lineNumberPos= 0;
  static int	 headerLine= 0;
  static int	 actionLine= 0;
  static char	*fileName= 0;
  static char	*outfileName= 0;
  static Trailer *trailer= 0;
  static Header	*headers= 0;

  void yyerror(char *message);

# define YY_INPUT(buf, result, max)			\
  {							\
    int c= getc(input);					\
    result= (EOF == c) ? 0 : (*(buf)= c, ++inputPos, 1); \
  }

# define YY_LOCAL(T)	static T
# define YY_RULE(T)	static T

#ifndef YY_MALLOC
#define YY_MALLOC(C, N)		malloc(N)
#endif
#ifndef YY_REALLOC
#define YY_REALLOC(C, P, N)	realloc(P, N)
#endif
#ifndef YY_FREE
#define YY_FREE(C, P)		free(P)
#endif
#ifndef YY_LOCAL
#define YY_LOCAL(T)	static T
#endif
#ifndef YY_ACTION
#define YY_ACTION(T)	static T
#endif
#ifndef YY_RULE
#define YY_RULE(T)	static T
#endif
#ifndef YY_PARSE
#define YY_PARSE(T)	T
#endif
#ifndef YYPARSE
#define YYPARSE		yyparse
#endif
#ifndef YYPARSEFROM
#define YYPARSEFROM	yyparsefrom
#endif
#ifndef YYRELEASE
#define YYRELEASE	yyrelease
#endif
#ifndef YY_BEGIN
#define YY_BEGIN	( yy->__begin= yy->__pos, 1)
#endif
#ifndef YY_END
#define YY_END		( yy->__end= yy->__pos, 1)
#endif
#ifdef YY_DEBUG
# define yyprintf(args)	fprintf args
#else
# define yyprintf(args)
#endif
#ifndef YYSTYPE
#define YYSTYPE	int
#endif
#ifndef YY_STACK_SIZE
#define YY_STACK_SIZE 128
#endif

#ifndef YY_BUFFER_SIZE
#define YY_BUFFER_SIZE 1024
#endif

#ifndef YY_PART

typedef struct _yycontext yycontext;
typedef void (*yyaction)(yycontext *yy, char *yytext, int yyleng);
typedef struct _yythunk { int begin, end;  yyaction  action;  struct _yythunk *next; } yythunk;

struct _yycontext {
  char     *__buf;
  int       __buflen;
  int       __pos;
  int       __limit;
  char     *__text;
  int       __textlen;
  int       __begin;
  int       __end;
  int       __textmax;
  yythunk  *__thunks;
  int       __thunkslen;
  int       __thunkpos;
  YYSTYPE   __;
  YYSTYPE  *__val;
  YYSTYPE  *__vals;
  int       __valslen;
  int       __inputpos;
  int       __lineno;
  int       __linenopos;
#ifdef YY_DEBUG
  char      __escapeCharBuf[4];
#endif
#ifdef YY_CTX_MEMBERS
  YY_CTX_MEMBERS
#endif
#ifdef YY_RULES_PROFILE
  int       __rules_succeed_count[YYRULECOUNT+1];
  int       __rules_fail_count[YYRULECOUNT+1];
#endif
};

#ifdef YY_DEBUG
YY_LOCAL(const char *) yyescapedChar(yycontext *yy, int ch)
{
    const char *strCh = NULL;
    switch(ch)
    {
        case '\a':  strCh= "\\a"; break;	/* bel */
        case '\b':  strCh= "\\b"; break;	/* bs */
        case '\e':  strCh= "\\e"; break;	/* esc */
        case '\f':  strCh= "\\f"; break;	/* ff */
        case '\n':  strCh= "\\n"; break;	/* nl */
        case '\r':  strCh= "\\r"; break;   /* cr */
        case '\t':  strCh= "\\t"; break;   /* ht */
        case '\v':  strCh= "\\v"; break;	/* vt */
        //case '\'':  strCh= "\\'"; break;	/* sq */
        default:  snprintf(yy->__escapeCharBuf, sizeof(yy->__escapeCharBuf), "%c", ch);
    }
    if(strCh) snprintf(yy->__escapeCharBuf, sizeof(yy->__escapeCharBuf), "%s", strCh);
    return yy->__escapeCharBuf;
}
#endif

#ifdef YY_CTX_LOCAL
#define YY_CTX_PARAM_	yycontext *yyctx,
#define YY_CTX_PARAM	yycontext *yyctx
#define YY_CTX_ARG_	yyctx,
#define YY_CTX_ARG	yyctx
#ifndef YY_INPUT
#define YY_INPUT(yy, buf, result, max_size)		\
  {							\
    int yyc= getchar();					\
    result= (EOF == yyc) ? 0 : (*(buf)= yyc, ++yy->__inputpos, 1); \
    yyprintf((stderr, "<%s>", yyescapedChar(yy, yyc)));\
  }
#endif
#else
#define YY_CTX_PARAM_
#define YY_CTX_PARAM
#define YY_CTX_ARG_
#define YY_CTX_ARG
yycontext _yyctx= { 0, 0 };
yycontext *yyctx= &_yyctx;
#ifndef YY_INPUT
#define YY_INPUT(buf, result, max_size)			\
  {							\
    int yyc= getchar();					\
    result= (EOF == yyc) ? 0 : (*(buf)= yyc, ++yyctx->__inputpos, 1); \
    yyprintf((stderr, "<%s>", yyescapedChar(yyctx, yyc)));\
  }
#endif
#endif

YY_LOCAL(int) yyrefill(yycontext *yy)
{
  int yyn;
  while (yy->__buflen - yy->__pos < 512)
    {
#ifdef YY_DEBUG
      int new_buflen = yy->__buflen * 2;
      yy->__buf= (char *)YY_REALLOC(yy, yy->__buf, new_buflen);
      memset(yy->__buf+yy->__buflen, 0, yy->__buflen);
      yy->__buflen = new_buflen;
#else
      yy->__buflen *= 2;
      yy->__buf= (char *)YY_REALLOC(yy, yy->__buf, yy->__buflen);
#endif
    }
#ifdef YY_CTX_LOCAL
  YY_INPUT(yy, (yy->__buf + yy->__pos), yyn, (yy->__buflen - yy->__pos));
#else
  YY_INPUT((yy->__buf + yy->__pos), yyn, (yy->__buflen - yy->__pos));
#endif
  if (!yyn) return 0;
  yy->__limit += yyn;
  return 1;
}

YY_LOCAL(int) yymatchDot(yycontext *yy)
{
  if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
  ++yy->__pos;
  return 1;
}

YY_LOCAL(int) yymatchChar(yycontext *yy, int c)
{
  if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
  if ((unsigned char)yy->__buf[yy->__pos] == c)
    {
      ++yy->__pos;
      yyprintf((stderr, "  ok   yymatchChar(yy, %s) @%d:%d %s\n", yyescapedChar(yy, c), yy->__lineno, yy->__inputpos-yy->__linenopos, yy->__buf+yy->__pos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchChar(yy, %s) @%d:%d %s\n", yyescapedChar(yy, c), yy->__lineno, yy->__inputpos-yy->__linenopos, yy->__buf+yy->__pos));
  return 0;
}

YY_LOCAL(int) yymatchCharCaseInsensitive(yycontext *yy, int c)
{
  if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
  if (tolower(yy->__buf[yy->__pos]) == tolower(c))
    {
      ++yy->__pos;
      yyprintf((stderr, "  ok   yymatchCharCaseInsensitive(yy, %s) @%d:%d %s\n", yyescapedChar(yy, c), yy->__lineno, yy->__inputpos-yy->__linenopos, yy->__buf+yy->__pos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchCharCaseInsensitive(yy, %s) @%d:%d %s\n", yyescapedChar(yy, c), yy->__lineno, yy->__inputpos-yy->__linenopos, yy->__buf+yy->__pos));
  return 0;
}

YY_LOCAL(int) yymatchString(yycontext *yy, const char *s)
{
  int yysav= yy->__pos;
  while (*s)
    {
      if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
      if (yy->__buf[yy->__pos] != *s)
        {
          yy->__pos= yysav;
          return 0;
        }
      ++s;
      ++yy->__pos;
    }
  return 1;
}

YY_LOCAL(int) yymatchStringCaseInsensitive(yycontext *yy, const char *s)
{
  int yysav= yy->__pos;
  while (*s)
    {
      if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
      if (tolower(yy->__buf[yy->__pos]) != tolower(*s))
        {
          yy->__pos= yysav;
          return 0;
        }
      ++s;
      ++yy->__pos;
    }
  return 1;
}

YY_LOCAL(int) yymatchClass(yycontext *yy, unsigned char *bits)
{
  int c;
  if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
  c= (unsigned char)yy->__buf[yy->__pos];
  if (bits[c >> 3] & (1 << (c & 7)))
    {
      ++yy->__pos;
      yyprintf((stderr, "  ok   yymatchClass @%d:%d %s\n", yy->__lineno, yy->__inputpos-yy->__linenopos, yy->__buf+yy->__pos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchClass @%d:%d %s\n", yy->__lineno, yy->__inputpos-yy->__linenopos, yy->__buf+yy->__pos));
  return 0;
}

YY_LOCAL(int) yymatchClassCaseInsensitive(yycontext *yy, unsigned char *bits)
{
  int c;
  if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
  c= tolower((unsigned char)yy->__buf[yy->__pos]);
  if (bits[c >> 3] & (1 << (c & 7)))
    {
      ++yy->__pos;
      yyprintf((stderr, "  ok   yymatchClassCaseInsensitive @%d:%d %s\n", yy->__lineno, yy->__inputpos-yy->__linenopos, yy->__buf+yy->__pos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchClassCaseInsensitive @%d:%d %s\n", yy->__lineno, yy->__inputpos-yy->__linenopos, yy->__buf+yy->__pos));
  return 0;
}

YY_LOCAL(void) yyDo(yycontext *yy, yyaction action, int begin, int end)
{
  while (yy->__thunkpos >= yy->__thunkslen)
    {
      yy->__thunkslen *= 2;
      yy->__thunks= (yythunk *)YY_REALLOC(yy, yy->__thunks, sizeof(yythunk) * yy->__thunkslen);
    }
  yy->__thunks[yy->__thunkpos].begin=  begin;
  yy->__thunks[yy->__thunkpos].end=    end;
  yy->__thunks[yy->__thunkpos].action= action;
  ++yy->__thunkpos;
}

YY_LOCAL(int) yyText(yycontext *yy, int begin, int end)
{
  int yyleng= end - begin;
  if (yyleng <= 0)
    yyleng= 0;
  else
    {
      while (yy->__textlen < (yyleng + 1))
	{
	  yy->__textlen *= 2;
	  yy->__text= (char *)YY_REALLOC(yy, yy->__text, yy->__textlen);
	}
      memcpy(yy->__text, yy->__buf + begin, yyleng);
    }
  yy->__text[yyleng]= '\0';
  return yyleng;
}

YY_LOCAL(void) yyDone(yycontext *yy)
{
  int pos;
  for (pos= 0;  pos < yy->__thunkpos;  ++pos)
    {
      yythunk *thunk= &yy->__thunks[pos];
      int yyleng= thunk->end ? yyText(yy, thunk->begin, thunk->end) : thunk->begin;
      yyprintf((stderr, "DO [%d] %p %s\n", pos, thunk->action, yy->__text));
      thunk->action(yy, yy->__text, yyleng);
    }
  yy->__thunkpos= 0;
}

YY_LOCAL(void) yyCommit(yycontext *yy)
{
  if (yy->__pos > 0) {
    if ((yy->__limit -= yy->__pos)) {
      memmove(yy->__buf, yy->__buf + yy->__pos, yy->__limit);
    }
    yy->__begin -= yy->__pos;
    yy->__end -= yy->__pos;
    yy->__pos= 0;
  }
  yy->__thunkpos= 0;
}

YY_LOCAL(int) yyAccept(yycontext *yy, int tp0)
{
  if (tp0)
    {
      fprintf(stderr, "accept denied at %d\n", tp0);
      return 0;
    }
  else
    {
      yyDone(yy);
      yyCommit(yy);
    }
  return 1;
}

YY_LOCAL(void) yyPush(yycontext *yy, char *text, int count)
{
  yy->__val += count;
  while (yy->__valslen <= yy->__val - yy->__vals)
    {
      long offset= yy->__val - yy->__vals;
      yy->__valslen *= 2;
      yy->__vals= (YYSTYPE *)YY_REALLOC(yy, yy->__vals, sizeof(YYSTYPE) * yy->__valslen);
      yy->__val= yy->__vals + offset;
    }
}
YY_LOCAL(void) yyPop(yycontext *yy, char *text, int count)   { yy->__val -= count; }
YY_LOCAL(void) yySet(yycontext *yy, char *text, int count)   { yy->__val[count]= yy->__; }

#endif /* YY_PART */

#define	YYACCEPT	yyAccept(yy, yythunkpos0)

YY_RULE(int) yy_comment(yycontext *yy); /* 42 */
YY_RULE(int) yy_space(yycontext *yy); /* 41 */
YY_RULE(int) yy_literalBraces(yycontext *yy); /* 40 */
YY_RULE(int) yy_braces(yycontext *yy); /* 39 */
YY_RULE(int) yy_range(yycontext *yy); /* 38 */
YY_RULE(int) yy_char(yycontext *yy); /* 37 */
YY_RULE(int) yy_END(yycontext *yy); /* 36 */
YY_RULE(int) yy_BEGIN(yycontext *yy); /* 35 */
YY_RULE(int) yy_DOT(yycontext *yy); /* 34 */
YY_RULE(int) yy_class(yycontext *yy); /* 33 */
YY_RULE(int) yy_identstart(yycontext *yy); /* 32 */
YY_RULE(int) yy_literalDQ(yycontext *yy); /* 31 */
YY_RULE(int) yy_literalSQ(yycontext *yy); /* 30 */
YY_RULE(int) yy_CLOSE(yycontext *yy); /* 29 */
YY_RULE(int) yy_OPEN(yycontext *yy); /* 28 */
YY_RULE(int) yy_COLON(yycontext *yy); /* 27 */
YY_RULE(int) yy_PLUS(yycontext *yy); /* 26 */
YY_RULE(int) yy_STAR(yycontext *yy); /* 25 */
YY_RULE(int) yy_QUESTION(yycontext *yy); /* 24 */
YY_RULE(int) yy_primary(yycontext *yy); /* 23 */
YY_RULE(int) yy_NOT(yycontext *yy); /* 22 */
YY_RULE(int) yy_suffix(yycontext *yy); /* 21 */
YY_RULE(int) yy_AND(yycontext *yy); /* 20 */
YY_RULE(int) yy_AT(yycontext *yy); /* 19 */
YY_RULE(int) yy_action(yycontext *yy); /* 18 */
YY_RULE(int) yy_TILDE(yycontext *yy); /* 17 */
YY_RULE(int) yy_prefix(yycontext *yy); /* 16 */
YY_RULE(int) yy_error(yycontext *yy); /* 15 */
YY_RULE(int) yy_BAR(yycontext *yy); /* 14 */
YY_RULE(int) yy_sequence(yycontext *yy); /* 13 */
YY_RULE(int) yy_SEMICOLON(yycontext *yy); /* 12 */
YY_RULE(int) yy_expression(yycontext *yy); /* 11 */
YY_RULE(int) yy_EQUAL(yycontext *yy); /* 10 */
YY_RULE(int) yy_identifier(yycontext *yy); /* 9 */
YY_RULE(int) yy_RPERCENT(yycontext *yy); /* 8 */
YY_RULE(int) yy_end_of_line(yycontext *yy); /* 7 */
YY_RULE(int) yy_end_of_file(yycontext *yy); /* 6 */
YY_RULE(int) yy_trailer(yycontext *yy); /* 5 */
YY_RULE(int) yy_definition(yycontext *yy); /* 4 */
YY_RULE(int) yy_declaration(yycontext *yy); /* 3 */
YY_RULE(int) yy__(yycontext *yy); /* 2 */
YY_RULE(int) yy_grammar(yycontext *yy); /* 1 */

#ifdef YY_RULES_PROFILE
static const char *yyrulenames[YYRULECOUNT+1] = {
NULL,
"grammar", /* 1 */
"_", /* 2 */
"declaration", /* 3 */
"definition", /* 4 */
"trailer", /* 5 */
"end_of_file", /* 6 */
"end_of_line", /* 7 */
"RPERCENT", /* 8 */
"identifier", /* 9 */
"EQUAL", /* 10 */
"expression", /* 11 */
"SEMICOLON", /* 12 */
"sequence", /* 13 */
"BAR", /* 14 */
"error", /* 15 */
"prefix", /* 16 */
"TILDE", /* 17 */
"action", /* 18 */
"AT", /* 19 */
"AND", /* 20 */
"suffix", /* 21 */
"NOT", /* 22 */
"primary", /* 23 */
"QUESTION", /* 24 */
"STAR", /* 25 */
"PLUS", /* 26 */
"COLON", /* 27 */
"OPEN", /* 28 */
"CLOSE", /* 29 */
"literalSQ", /* 30 */
"literalDQ", /* 31 */
"identstart", /* 32 */
"class", /* 33 */
"DOT", /* 34 */
"BEGIN", /* 35 */
"END", /* 36 */
"char", /* 37 */
"range", /* 38 */
"braces", /* 39 */
"literalBraces", /* 40 */
"space", /* 41 */
"comment", /* 42 */

};
#endif
YY_ACTION(void) yy_1_end_of_line(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_end_of_line\n"));
  {
#line 172
   ++lineNumber; lineNumberPos=inputPos; ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_action(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_action\n"));
  {
#line 137
   actionLine= lineNumber; ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_12_primary(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_12_primary\n"));
  {
#line 115
   push(makePredicate("YY_END")); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_11_primary(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_11_primary\n"));
  {
#line 114
   push(makePredicate("YY_BEGIN")); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_10_primary(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_10_primary\n"));
  {
#line 113
   push(makeAction(actionLine, yytext)); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_9_primary(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_9_primary\n"));
  {
#line 112
   push(makeDot()); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_8_primary(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_8_primary\n"));
  {
#line 111
   setTopClassCharCaseInsensitive(); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_7_primary(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_7_primary\n"));
  {
#line 110
   push(makeClass(yytext)); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_6_primary(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_6_primary\n"));
  {
#line 109
   setTopStrCharCaseInsensitive(); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_5_primary(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_5_primary\n"));
  {
#line 108
   push(makeString(yytext, '"')); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_4_primary(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_4_primary\n"));
  {
#line 107
   push(makeString(yytext, '\'')); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_3_primary(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_3_primary\n"));
  {
#line 103
   push(makeName(findRule(yytext))); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_2_primary(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_2_primary\n"));
  {
#line 102
   Node *name= makeName(findRule(yytext));  name->name.variable= pop();  push(name); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_primary(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_primary\n"));
  {
#line 101
   push(makeVariable(yytext)); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_3_suffix(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_3_suffix\n"));
  {
#line 97
   push(makePlus (pop())); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_2_suffix(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
